<?xml version="1.0" encoding="utf-8"?>
<!-- Root layout for the Loops activity -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_start"
    tools:context=".Loops">

    <!-- ScrollView to allow scrolling if content exceeds screen height -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- LinearLayout to arrange content vertically -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title TextView: "Loops in Python" -->
            <TextView
                android:id="@+id/loops_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/loops_title"
                android:textColor="#FFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- Explanation TextView: Describes loops -->
            <TextView
                android:id="@+id/loops_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/loops_explanation"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- Text-to-Speech Button: Reads the loops explanation aloud -->
            <Button
                android:id="@+id/textToSpeechButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/text_to_speech_button" />

            <!-- For Loop Section -->
            <TextView
                android:id="@+id/for_loop_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/for_loop_title"
                android:textColor="#FFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- For Loop Explanation -->
            <TextView
                android:id="@+id/for_loop_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/for_loop_explanation"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- For Loop Example 1 -->
            <TextView
                android:id="@+id/for_loop_example1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/for_loop_example1"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- For Loop Example 2 -->
            <TextView
                android:id="@+id/for_loop_example2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/for_loop_example2"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- While Loop Section -->
            <TextView
                android:id="@+id/while_loop_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/while_loop_title"
                android:textColor="#FFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- While Loop Explanation -->
            <TextView
                android:id="@+id/while_loop_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/while_loop_explanation"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- While Loop Example 1 -->
            <TextView
                android:id="@+id/while_loop_example1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/while_loop_example1"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- Loop Control Section -->
            <TextView
                android:id="@+id/loop_control_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/loop_control_title"
                android:textColor="#FFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- Loop Control Explanation -->
            <TextView
                android:id="@+id/loop_control_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/loop_control_explanation"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- Loop Control Example -->
            <TextView
                android:id="@+id/loop_control_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/loop_control_example"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- Challenge TextView: Encourages the user to create a program -->
            <TextView
                android:id="@+id/challengeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/loops_challenge"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:layoutDirection="ltr"
                android:textDirection="ltr" />

            <!-- EditText for entering Python code -->
            <EditText
                android:id="@+id/codeEditor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:hint="@string/code_editor_hint"
                android:inputType="textMultiLine"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textColor="#FFFF"
                android:textColorHint="#FFFF"
                android:textSize="16sp"
                android:layoutDirection="ltr"
                android:textDirection="ltr"
                tools:ignore="Autofill" />

            <!-- Button to run the entered Python code -->
            <Button
                android:id="@+id/runCodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/run_code_button" />

            <!-- TextView to display the output of the executed Python code -->
            <TextView
                android:id="@+id/outputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textColor="#FFFF"
                android:layoutDirection="ltr"
                android:textDirection="ltr"
                android:textSize="16sp" />

            <!-- Button to go to LoopsPractice -->
            <Button
                android:id="@+id/goToLoopsPracticeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10sp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/go_to_practice_button" />
        </LinearLayout>
    </ScrollView>

    <!-- FrameLayout to hold LoopsPractice fragment -->
    <FrameLayout
        android:id="@+id/fragment_loops_practice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

</FrameLayout>