<?xml version="1.0" encoding="utf-8"?>
<!-- Root layout for the LoginFragment -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_background"
    tools:context=".LoginFragment">

    <!-- LinearLayout to arrange content vertically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- EditText for entering email -->
        <EditText
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:id="@+id/EnterEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:textSize="20sp"
            android:textColorHint="#FFFFFF"
            android:hint="@string/enter_login_email"
            android:inputType="text"
            tools:ignore="TextFields" />

        <!-- EditText for entering password -->
        <EditText
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:id="@+id/EnterPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/enter_login_password"
            android:inputType="textPassword" />

        <!-- Button for logging in -->
        <Button
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:id="@+id/buttonLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/login" />

        <!-- Button for signing up -->
        <Button
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:id="@+id/buttonSignUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_button" />

        <!-- Button for going back to HomePage -->
        <Button
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:id="@+id/gotoHomePageButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/go_back" />
    </LinearLayout>
</FrameLayout>