<?xml version="1.0" encoding="utf-8"?>
<!-- Root layout for the RegisterFragment -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <!-- LinearLayout to arrange content vertically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/day_background">

        <!-- Title TextView for the registration screen -->
        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2" />

        <!-- EditText for entering name -->
        <EditText
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:id="@+id/newName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/enter_name"
            android:inputType="textPersonName" />

        <!-- EditText for entering email -->
        <EditText
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:id="@+id/newEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <!-- EditText for entering password -->
        <EditText
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:id="@+id/newPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <!-- EditText for re-entering password -->
        <EditText
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:id="@+id/newReEnterPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/reenter_password"
            android:inputType="textPassword" />

        <!-- EditText for entering phone number -->
        <EditText
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:id="@+id/newPhoneNumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/enter_phone"
            android:inputType="phone" />

        <!-- Button for signing up -->
        <Button
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:id="@+id/newSignUpButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:text="@string/sign_up" />

    </LinearLayout>
</FrameLayout>